examples/test/testpolicy7615.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7615
  namespace: namespace60
spec:
  podSelector:
    matchLabels:
      key18: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value10
          key31: value10
          key14: value30
      podSelector:
        matchLabels:
          key43: value2
          key24: value46
          key15: value24
